JO-2008-03-31-0: Enhancem.:   Fixed typos, consistency changes, changed messages according to Janice advice
                 Review:      AP

PJ-2008-03-27-0: Bugfix:      Latebindings for Advanced Queries does not work
                 Bugster:     6677885
                 Issue:       2529
                 Bugfix:      Repaired object synchronization in ArcoServlet
                 Bugfix:      Fixed online help for advance query latebindings
                 Review:      JO 

PJ-2008-03-20-1: Bugfix.:     Advanced Query with wild card character * does not produce correct results.
                 Enhancem.:   The SQLQueryResultsets now follow the names from the database row set meta data.
                 Enhancem.:   The lifecycle of the SQLQueryResultsets was optimised. Passivate is called in finally
                 Enhancem.:   Unused statements and results pro ArcoDbConnection was removed
                 Bugster:     6511009
                 Review:      LP

PJ-2008-03-20-0: Enhancem.:   Change the reporting project.xml

JO-2008-03-20-0: Enhancem.:   Enhanced reporting test SQLGeneratotTest
                 Review:      PJ

JG-2008-03-17-0: CVS:         Moved V61u4_TAG
                              - include in 6.1u4:      AP-2008-03-17-0,
                              - not included in 6.1u4: PJ-2008-03-04-0.
-----------------------------------------------------------------------

AP-2008-03-17-0: Bugfix:      Fix of incorrect usage summary for larger databases.
                 Review:      JO, AP

PJ-2008-03-04-0: Bugfix:      Validation of the Filter List in Simple Query builder
                              fails
                 Bugfix:      Row Limit in ARCo Simple Query builder cannot be 
                              empty
                 Bugster:     6670264, 6661461, 
                 Review:      JO

JG-2008-02-28-0: CVS:         Created V61u4_TAG.
------------------------------------------------
